--- a/apps/nx-socket-template/src/app/app.component.html
+++ b/apps/nx-socket-template/src/app/app.component.html
@@ -1,11 +1,1 @@
-<div style="text-align: center">
-    <h1>Welcome to nx-socket-template!</h1>
-    <img alt="Nx - Smart, Extensible Build Framework"
-         src="https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png"
-         width="450"/>
-</div>
-
-<input #nameInput placeholder="Name" type="text"/>
-<input #roomInput placeholder="Room" type="text"/>
-<button (click)="join(nameInput.value, roomInput.value)">Join</button>
-<button (click)="start()">Start</button>
+<router-outlet></router-outlet>
